--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,12 @@
     "sourceMap": true,
     "outDir": "dist",
     "strict": true,
-    "lib": ["esnext"],
-    "esModuleInterop": true
+    "lib": ["esnext", "DOM"],
+    "esModuleInterop": true,
+    "target": "es2020",
+    "rootDir": ".",
+    "module": "es2022",
+    "moduleResolution": "node",
+    "resolveJsonModule": true
   }
 }
