--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "allowSyntheticDefaultImports": true
   },
   "ts-node": {
-    "esm": true
+    "esm": true,
+    "transpileOnly": true
   }
 }
